style.scss
---
---

//
// IMPORTS
//

@import "_reset";
@import "_variables";
// Syntax highlighting @import is at the bottom of this file


/*resume must be at http://www.taylorwrightsanson.com/techresume.pdf */

/**************/
/* BASE RULES */
/**************/

html {
  font-size: 100%;
}

body {
	background: $white;
  font-family: $avenirNextMed;
  /*text-align: center;*/
  /*visibility: hidden;*/
}

/*.container {
  margin: 0 auto;
  max-width: 740px;
  padding: 0 10px;
  width: 100%;
}*/

h1, h2, h3, h4, h5, h6 {
  font-family: $avenirNext;
  color: $turquoiseColor;
  text-align: left;
  line-height: 1;
  /* margin: 1em 0 15px;*/
  padding: 0;

  @include mobile {
    line-height: 1.4;
  }
}
  
h1 {  
  font-size: 36px;
  font-weight: bold;
  display: inline;
  a {
    color: inherit;
  }
}

.center {
  text-align: center;
  display: block;
}

h2 {  
  font-size: 24px;
  font-weight: normal;
  font-family: $avenirNextReg;
  color: $lightGray;
}

h3 {  
  font-size: 20px;
}

h4 {  
  font-size: 18px;
  color: $gray;
}

p {
  margin: 15px 0;
  text-align: left;
  font-family: $avenirNextReg;
  line-height: 1.5;
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 0.01rem;
}

a {
  color: $turquoiseColor;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $redHighLight;
  }
}

a:hover {
  color: $redHighLight;
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

.date {
  font-style: italic;
  color: $gray;
}

// Specify the color of the selection
::selection { 
    background: $redHighLight; 
    color:#fff; 
    text-shadow: none; 
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/**********/
/* HEADER */
/**********/

ta {
  font-family: $avenirNextHeavy;
}
y {
  font-family: $avenirNextBold;
}
l {
  font-family: $avenirNextDemi;
}
o {
  font-family: $avenirNextMed;
}
r {
  font-family: $avenirNextReg;
}

#logo {
  font-size: 40px;
  margin: 24px 0 0 8%;
  text-align: left;
  display: inline-block;
  float: left;
}

#lineMenu {
  display: none;
}

nav {
  /*float: right;
  margin-top: 23px; // @TODO: Vertically middle align
  font-family: $helveticaNeue; 
  font-size: 18px; */

  position: fixed;
  width: 100%;
  top: 0;
  z-index: 1000;
  height: 75px;
  background-color: $white;

  display: block;

  -webkit-box-shadow:  0px 1px 1px 1px rgba(0, 0, 0, 0.5);
    box-shadow:  0px 1px 1px 1px rgba(0, 0, 0, 0.2);

  /*@include mobile {
    float: none;
    margin-top: 9px;
    display: block;
    font-size: 16px;
  }*/

  /*a {
    margin-left: 20px;
    color: $darkGray;
    text-align: right;
    font-weight: 300;
    letter-spacing: 1px;

    @include mobile {
      margin: 0 10px;
      color: $blue;
    }
  }*/
}

nav em {
  font-style: normal;
}

nav ul {
  text-align: center;
  margin: 37px 0 0 0;
  display: inline-block;
  float: left;
  font-size: 12px;
  padding: 0;
}

nav ul li {
  display: inline;
}

nav li a {
  text-decoration: none;
  font-size: 2em;
  display: inline-block;
  color: $turquoiseColor;

}

nav li a:hover em, #logo a:hover em{
  color:$darkPurple;
}

nav li a:hover, #logo a:hover{
  color: $turquoiseColor;
  text-shadow: 1px 0px 1px #000000;
    filter: dropshadow(color=#000000, offx=1, offy=0);
}

/*#logo {
  font-size: 1.5em;
}*/

.starIcons {
  max-height: 17px;
  margin: 0 5px 0 5px;
}

@media (max-width: 1292px) {
  #logo {
    float: inherit;
    margin: 10px 0 5px 31px;
    text-align: center;
    display: block;
  }

  nav {
    height: 90px;
  }

  nav ul {
    display: block;
    text-align: center;
    float: inherit;
    margin: 0 0 0 0;
  }
}

@media (max-width: 775px) {
  #logo {
    font-size: 33px;
    padding-top: 5px;
    float: inherit;
    display: inline-block;
    margin: 13px 0 4px 30%;
  }

  nav ul {
    font-size: 10px;
  }
}

@media (max-width: 701px) {
  #lineMenu {
    display: inherit;
    margin: 25px 10px 0 0;
    font-size: 1.9em;
    position: absolute;
    right: 20px;
    color: #0DA4B5;
  }

  nav {
    height: 60px;
  }

  #logo {
    margin-left: 23%;
  }
}

@media (max-width: 550px) {
  #logo {
    margin-left: 1%;
  }
}

@media (max-width: 430px) {
  #logo {
    font-size: 31px;
    margin: 19px 0 0 6px;
  }

  #lineMenu {
    margin-right: 0px;
  }
}
/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

/*.wrapper-masthead {
  margin-bottom: 50px;
}

.masthead {
  padding: 20px 0;
  border-bottom: 1px solid $lightGray;
  
  @include mobile {
    text-align: center;
  }
}*/

.site-avatar {
  float: left;
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: $darkGray;
  cursor: pointer;
  font-family: $avenirNext; 
  font-weight: 300;
  font-size: 28px;
  letter-spacing: 1px;
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;
  
  @include mobile {
    margin: 3px 0;
  }
}

/* Home Welcome */
#welcome {
  width: 50%;
  position: absolute;
  top: 200px;
  text-align: left;
  margin: 100px 0px 0px 3%;
  height: 180px !important;
}

#welcome p {
  background-color: rgba(20, 20, 20, 0.9);
  padding: 15px 0px 15px 15px;
  color: $turquoiseColor;
  text-shadow: 0px 2px 1px #000;
  width: 100%;
  font-family: $avenirNextMed;
  font-size: 24px;
  line-height: 1.2;
}

.lookHereBox {
  background-color: rgba(20, 20, 20, 0.9);
  position:absolute;
  width:300px;
  height:25px;
  bottom:0px;
  right:25%;
  left:50%;
  margin-left:-150px;
}

.lookHereBox h2 {
  text-align: center;
  color: $turquoiseColor;
}

.readTime {
  /*background-color: rgba(20, 20, 20, 0.9);*/
  width: 70px;
  display: inline; 
  float: right;
  font-size: 14px;
  margin-top: -20px;
}

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post { 
  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $gray;
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 15px;
  }
}

// Index content paralax

section.module.home.parallax {
  top: 0;
  height: 800px;
  /* background-position: 50% 50%; */
  background-repeat: no-repeat;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
section.module.home.parallax-1 {
  background-image: url("../images/blueBlur.jpg");
}

// Other pages parallax

section.module:last-child {
  margin-bottom: 0;
}

section.module p {
  margin-bottom: 40px;
  /*font-weight: 300;*/
}
section.module p:last-child {
  margin-bottom: 0;
}
section.module.content {
  padding: 40px 10px;
  max-width: 650px;
  margin: auto;
}
section.module.parallax {
  top: 0;
  height: 400px;
  /* background-position: 50% 50%; */
  background-repeat: no-repeat;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

section.module.parallax h1 {
  color: rgba(255, 255, 255, 0.8);
  font-size: 48px;
  line-height: 600px;
  font-weight: 700;
  text-align: center;
  text-transform: uppercase;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}
section.module.parallax-1 {
  background-image: url("../images/tent.jpg");
}
section.module.parallax-2 {
  background-image: url("../images/blueBlur.jpg");
}
section.module.parallax-3 {
  background-image: url("../images/blueBlur.jpg");
}

@media all and (min-width: 600px) {
  section.module h2 {
    /*font-size: 42px;*/
  }
  section.module p {
    /*font-size: 20px;*/
  }
  section.module.parallax h1 {
    /*font-size: 96px;*/
  }
}
@media all and (min-width: 960px) {
  section.module.parallax h1 {
    /*font-size: 160px;*/
  }
}

// Circus parallax

section.module.circus {
    height: 800px;
}
section.module.circus.parallax-2 {
  height: 750px;
  padding-top: 25px;
}
section.module.circus.parallax-1 {
  background-image: url("../images/tent.jpg");
}

section.module.circus.parallax-2 {
  background-image: url();
  background-color: $darkBlue;
}

#videoHolder {
  padding-top: 140px;
  max-height: 590px;
  max-width: 950px;
  margin: 5px auto 0 auto;
}

.embed-container { 
  position: relative; 
  padding-bottom: 56.25%; 
  padding-top: 30px; 
  height: 0; 
  overflow: hidden; 
  max-width: 100%; 
  height: auto; 
} 

.embed-container iframe, 
.embed-container object, 
.embed-container embed { 
  position: absolute; 
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%; 
}
.gallery { 
  max-width: 960px; 
  width: auto;
  margin: 0 auto; 
  text-align: center; 
}
.gallery figure { 
  text-align: center; 
  float: none; 
  margin: 10px; 
  display: inline-block; 
}

.spacer {
  /*bottom: 50px;*/
  text-align: center;
  min-height: 100px;
}
.spacer.s0 {
  min-height: 1px;
}

.youtube-video {
  max-width: 853px;
  max-height: 450px;
  height: 100%;
}

/* Responsive slides */
.rslides {
  position: relative;
  list-style: none;
  overflow: hidden;
  width: 100%;
  max-width: 960px;
  max-height: 680px;
  padding: 0;
  margin: 0 auto;
 }
.rslides li {
  -webkit-backface-visibility: hidden;
  position: absolute;
  display: none;
  width: 100%;
  left: 0;
  top: 0;
 }
.rslides li:first-child {
  position: relative;
  display: block;
  float: left;
 }
.rslides img {
  display: block;
  height: auto;
  float: left;
  width: 100%;
  border: 0;
 }


#artist {
  margin-top: 75px;
  padding-top: 20px;
  padding-bottom: 20px;
}

#artist h1 {
  padding-bottom: 10px;
}

.wrapper-footer {
    background-color: $darkBlue;
}

footer {
  padding: 20px 0;
  text-align: center;
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "_highlights";

